Support that use snappy to compress piece's block data
This patch depend on google/snappy. Use snappy to compress/decompress
piece's block data.

Add a setting option `enable_piece_compression_transmission` to control
whether or not try to compress block data of piece before sent it to peer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -677,7 +677,7 @@ if (NOT Windows)
 endif()
 
 feature_option(build_tests "build tests" OFF)
-feature_option(build_examples "build examples" OFF)
+feature_option(build_examples "build examples" ON)
 feature_option(build_tools "build tools" OFF)
 feature_option(python-bindings "build python bindings" OFF)
 feature_option(python-egg-info "generate python egg info" OFF)
@@ -787,6 +787,8 @@ if (Boost_MAJOR_VERSION LESS_EQUAL 1 AND Boost_MINOR_VERSION LESS 69)
 	find_package(Boost REQUIRED COMPONENTS system)
 	target_link_libraries(torrent-rasterbar PUBLIC ${Boost_SYSTEM_LIBRARY})
 endif()
+
+target_link_libraries(torrent-rasterbar PUBLIC /usr/lib/x86_64-linux-gnu/libsnappy.so)
 
 if (exceptions)
 	if (MSVC)
